# agent-mission-control

./: .gitignore  ARCHITECTURE.md  AUDIT-QUICK-REFERENCE.md  AUDIT.md  AUDIT_BUILDING3D_DATAFLOW.md  AUDIT_CONFIG.md  AUDIT_DASHBOARD_STRUCTURE.md  AUDIT_DATA_MODEL.md  AUDIT_DEPLOY_MONITORING.md  AUDIT_HEARTBEAT_TESTS.md  AUDIT_KEYBOARD_COMPONENTS.md  AUDIT_PARTICLE_FAILURE_SYSTEMS.md  AUDIT_PLUGIN_SYSTEM.md  AUDIT_REPORT_2026-03-17.md  AUDIT_SUMMARY.txt  CHANGELOG.md  CLAUDE.md  COST_TRACKING_IMPLEMENTATION.md  PALANTIR_ROADMAP.md  PLUGIN_QUICK_START.md  README.md  ROADMAP.md  SPRINT-PLAN.md  TERMINAL_ARCHITECTURE.md  THE_TERMINAL_PACKAGE_SPEC.md  VISION.md  executor.py  next.config.ts  nexus.bat  nexus.ps1  package-lock.json  package.json  scheduler.py  sentry.client.config.ts  sentry.edge.config.ts  supabase_migration_cost_tracking.sql  templates-deere.json
contexts/: finance-email-style.md  finance-report-templates.md  finance-terminology.md
examples/: pl-engine-integration.py
output/: BarrelHouseCRM_7c2f67b6_20260316-231713.md  DASHBOARD_SUPABASE_AUDIT_2026-03-16.md  MoneyPrinter_2c0e9902_20260316-224937.md  MoneyPrinter_d3c48ff6_20260316-232638.md  MoneyPrinter_f3807377_20260317-002946.md  NEXUS_AUDIT_PARTICLE_FAILURE_2026-03-16.md  ai-chess-coach_4f6b144c_20260316-233240.md  ai-chess-coach_d31c6ea9_20260316-233343.md  ai-finance-brief_12e35ddc_20260316-223851.md  ai-finance-brief_f6fd63dd_20260316-224313.md  digest_20260317.md  (+68 more)
scripts/: run.py  (+28 more)
sdk/python/: mission_control.py  pyproject.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/frontend/: index.html
src-tauri/src/: daemon.rs  lib.rs  main.rs  tray.rs
(+262 files in other folders)
