[package]
name = "nexus"
version = "1.0.0"
description = "NEXUS — AI Agent Command Center"
authors = ["kjhholt-alt"]
edition = "2021"

[lib]
name = "nexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
