[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mission-control-sdk"
version = "0.1.0"
description = "Python SDK for reporting agent activity to Mission Control dashboard"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kruz Holt", email = "kjh.holt@gmail.com" },
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
py-modules = ["mission_control"]
